# clash-verge-rev

./: CONTRIBUTING.md  README.md  UPDATELOG.md  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: alpha.yml  release.yml
scripts/: portable-fixed-webview2.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
src-tauri/src/config/: clash.rs
src-tauri/src/utils/: dirs.rs  resolve.rs
src-tauri/src_crates/crate_mihomo_api/: Cargo.toml
src-tauri/src_crates/crate_mihomo_api/scripts/: test_windows.ps1
src-tauri/src_crates/crate_mihomo_api/src/: lib.rs  model.rs  sock.rs
src-tauri/src_crates/crate_mihomo_api/src/platform/: unix.rs
src-tauri/src_crates/crate_mihomo_api/tests/: test_mihomo_api.rs
src/locales/: ru.json
