[package]
name = "mihomo_api"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["http1", "client"] }
hyper-util = "0.1.11"
hyperlocal = "0.9.1"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "io-std",
] }

[dev-dependencies]
dotenv = "0.15.0"
lazy_static = "1.5.0"
